# storage/api-docs/api-docs.json
@@ -72,6 +72,69 @@
                 }
             }
         },
+        "/api/point/{teamId}": {
+            "get": {
+                "tags": [
+                    "Point-Table"
+                ],
+                "operationId": "/api/point/{teamId}",
+                "parameters": [
+                    {
+                        "name": "teamId",
+                        "in": "path",
+                        "description": "Team Id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/point": {
+            "get": {
+                "tags": [
+                    "Point-Table"
+                ],
+                "operationId": "/api/point",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/team/{id}": {
             "get": {
                 "tags": [
